--- a/index.css
+++ b/index.css
@@ -18,14 +18,6 @@ ul {
 
 /* http://vinthomas.com/ */
 
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{
-	margin:0;
-	padding:0;
-	border:0;
-	font-size:100%;
-	font:inherit;
-	vertical-align:baseline
-}
 	
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{
 	display:block
@@ -61,69 +53,11 @@ code{
 	font:16px Monaco,monospace
 }
 
-a{outline:0}
-
-a img{border:none}
-
-img{-ms-interpolation-mode:bicubic}
-
-body,html{height:100%}
-
-input[type=text],input[type=password],textarea{-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;-webkit-appearance:none;font-family:inherit}
-
-textarea{resize:none}
-
-*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}
-
 .clearfix{*zoom:1}
 
 .clearfix:before,.clearfix:after{display:table;content:"";line-height:0}
 
 .clearfix:after{clear:both}
-
-.hide_text{font:0/0 a;color:transparent;text-shadow:none;background-color:transparent;border:0}
-
-.prevent-text-breakouts{-ms-word-break:break-all;word-break:break-all;word-break:break-word;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto}
-
-.no_highlight{-webkit-tap-highlight-color:rgba(0,0,0,0)}
-
-.no-select{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
-
-.pull_left{float:left}
-
-.pull_right{float:right}
-
-.clear{clear:both}
-
-.center_text{text-align:center}
-
-.hover_underline:hover{text-decoration:underline}
-
-.hide,.hidden{display:none}
-
-.btn{border:none;font-family:inherit;outline:0;vertical-align:middle;white-space:nowrap;-webkit-appearance:none;cursor:pointer;text-decoration:none}
-
-@font-face{font-family:icomoon;src:url(../images/icons/icomoon.eot);src:url(../images/icons/icomoon.eot?#iefix) format('embedded-opentype'),url(../images/icons/icomoon.woff) format('woff'),url(../images/icons/icomoon.ttf) format('truetype'),url(../images/icons/icomoon.svg#icomoon) format('svg');font-weight:400;font-style:normal}
-
-[class^=icon-],[class*=" icon-"],.icon{font-family:icomoon;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
-
-.icon-twitter:before{content:"\e49d"}
-
-.icon-dribbble:before{content:"\e4b1"}
-
-.icon-email:before{content:"\e0eb"}
-
-.icon-link:before{content:"\e2cf"}
-
-.text-left{text-align:left}
-
-.text-center{text-align:center}
-
-.text-right{text-align:right}
-
-a.hover_underline,.fake_link.hover_underline{text-decoration:none}
-
-a.hover_underline:hover,.fake_link.hover_underline:hover{text-decoration:underline}
 
 body{background:#fff;font-family:'Proxima Nova Soft',proxima-nova-soft,Helvetica,Arial,sans-serif;font-size:62.5%}
 
@@ -143,50 +77,7 @@ body{background:#fff;font-family:'Proxima Nova Soft',proxima-nova-soft,Helvetica
 
 .introduction .social_links li:hover{-webkit-transform:scale(1.2);-moz-transform:scale(1.2);-ms-transform:scale(1.2);-o-transform:scale(1.2);transform:scale(1.2)}
 
-@media screen and (max-width:515px){
-	.introduction{padding-top:60px;padding-bottom:60px}
-	.introduction h1{font-size:40px}
-	.introduction p{font-size:20px}}
-
-@media screen and (max-width:390px){
-	.introduction h1{font-size:30px}
-	.introduction p{font-size:18px}}
-
 .project{font-size:18px;line-height:24px;color:#6b696e;font-weight:200}
-
-.project.github{background:#fff}
-
-.project.github h2 a,.project.github p a:hover,.project.github .visit_link{color:#000000}
-
-.project.github a{color:#39383b}
-
-.project.github .project_description{float:left;padding-top:60px;padding-top:6.185567%}
-
-.project.github h2 a:hover{color:rgba(230,77,52,.6)}
-
-.project.github .visit_link:hover{border-bottom:1px solid rgba(230,77,52,.25)}
-
-.project.instagram{background:#2b95d2;color:#fff}
-
-.project.instagram h2 a,.project.instagram p a:hover,.project.instagram .visit_link{color:#fff}
-
-.project.instagram a{color:#fff}
-
-.project.instagram .project_description{float:right;padding-top:48px}
-
-.project.instagram:after {
-    content: '\A';
-    position: absolute;
-    width: 100%; height:100%;
-    top:0; left:0;
-    background:rgba(0,0,0,0.6);
-    opacity: 0;
-    transition: all 1s;
-    -webkit-transition: all 1s;
-}
-.project.instagram.image:hover:after{opacity:1;}
-
-.project.instagram .visit_link:hover{border-bottom:1px solid rgba(255,255,255,.4)}
 
 .project a{text-decoration:none}
 
@@ -201,6 +92,28 @@ body{background:#fff;font-family:'Proxima Nova Soft',proxima-nova-soft,Helvetica
 .project .project_description p{margin-bottom:30px}
 
 .project .visit_link{text-transform:uppercase;font-size:14px;letter-spacing:2px;font-weight:500;border-bottom:1px solid transparent;padding-bottom:2px;-webkit-transition:all 220ms ease-in-out;-moz-transition:all 220ms ease-in-out;-o-transition:all 220ms ease-in-out;transition:all 220ms ease-in-out}
+
+.project.github{background:#fff}
+
+.project.github h2 a,.project.github p a:hover,.project.github .visit_link{color:#000000}
+
+.project.github a{color:#39383b}
+
+.project.github .project_description{float:left;padding-top:60px;padding-top:6.185567%}
+
+.project.github h2 a:hover{color:rgba(0, 0, 0)}
+
+.project.github .visit_link:hover{border-bottom:1px solid rgba(255, 255, 255.25)}
+
+.project.instagram{background:#2b95d2;color:#fff}
+
+.project.instagram h2 a{color:#fff}
+
+.project.instagram a{color:#fff}
+
+.project.instagram.image:hover:after{opacity:1;}
+
+.project.instagram .visit_link:hover{border-bottom:1px solid rgba(255,255,255,.4)}
 
 .project .github_projects{width:56.7010309%;float:right;position:relative;z-index:65}
 
@@ -223,34 +136,6 @@ body{background:#fff;font-family:'Proxima Nova Soft',proxima-nova-soft,Helvetica
 .project .ipad{width:58.7628866%;float:left;position:relative;z-index:30}
 
 .project .ipad img{display:block;margin-left:-40px;margin-top:-74px;width:110.5263158%;height:auto}
-
-@media screen and (max-width:870px){.project .github_projects,.project .ipad{width:100%;max-width:550px;margin:0 auto 42px;float:none}.project .ipad{max-width:100%;text-align:center}.project .ipad img{margin-left:0;max-width:100%;width:auto;display:inline-block}.project.github .project_description,.project.instagram .project_description{float:none;text-align:center;width:100%;max-width:550px;margin:0 auto;padding-top:0}.project.github .project_description h2,.project.instagram .project_description h2{margin-bottom:30px}}
-
-@media screen and (max-width:420px){.project .container{padding-left:20px;padding-right:20px}.project .github_projects img.left,.project .github_projects img.right{width:52%}}
-
-section.current-projects{padding:60px 0 0;background:#fff}
-
-section.current-projects h2{color:#E84E89;font-size:30px;line-height:30px;margin-bottom:60px;text-align:center}
-
-section.current-projects h2 a{color:#E84E89;text-decoration:none;-webkit-transition:all 180ms ease;-moz-transition:all 180ms ease;-o-transition:all 180ms ease;transition:all 180ms ease}
-
-section.current-projects h2 a:hover{opacity:.7}
-
-section.current-projects .dribbble-projects-list{*zoom:1}
-
-section.current-projects .dribbble-projects-list:before,section.current-projects .dribbble-projects-list:after{display:table;content:"";line-height:0}
-
-section.current-projects .dribbble-projects-list:after{clear:both}
-
-section.current-projects .dribbble-projects-list a{display:block;float:left;margin:0;width:16.66666667%;height:auto}
-
-section.current-projects .dribbble-projects-list a:hover{opacity:.7}
-
-section.current-projects .dribbble-projects-list img{display:block;width:100%;height:auto}
-
-@media screen and (max-width:1269px){section.current-projects .dribbble-projects-list a{width:33.333333333%}}
-
-@media screen and (max-width:540px){section.current-projects h2{font-size:26px}section.current-projects .dribbble-projects-list a{width:50%}}
 
 section.links{background:#261a31;padding:100px 0}
 
@@ -284,30 +169,8 @@ section.work_together h2{font-size:30px;line-height:30px;margin-bottom:42px}
 
 section.work_together p{max-width:530px;margin:0 auto 42px}
 
-section.work_together .email_circle{display:block;margin:0 auto 42px;width:120px;height:120px;background:#fff;border-radius:120px;text-align:center;line-height:120px;color:#66527d;text-decoration:none;-webkit-transition:all 220ms ease-in-out;-moz-transition:all 220ms ease-in-out;-o-transition:all 220ms ease-in-out;transition:all 220ms ease-in-out}
-
-section.work_together .email_circle:hover{-webkit-transform:scale(1.2);-moz-transform:scale(1.2);-ms-transform:scale(1.2);-o-transform:scale(1.2);transform:scale(1.2)}
-
-section.work_together .email_circle .icon-email{font-size:30px;width:48px;height:48px;text-align:center;line-height:48px;display:inline-block;position:relative;top:8px;-webkit-transition:all 220ms ease-in-out;-moz-transition:all 220ms ease-in-out;-o-transition:all 220ms ease-in-out;transition:all 220ms ease-in-out}
-
 section.work_together .email_link{font-size:14px;text-transform:uppercase;letter-spacing:2px;color:#fff;text-decoration:none;padding-bottom:2px;-webkit-transition:all 220ms ease-in-out;-moz-transition:all 220ms ease-in-out;-o-transition:all 220ms ease-in-out;transition:all 220ms ease-in-out;border-bottom:1px solid transparent}
 
 section.work_together .email_link:hover{border-bottom:1px solid rgba(255,255,255,.2)}
 
 @media screen and (max-width:420px){section.work_together{padding-top:80px;padding-bottom:80px}section.work_together .container{padding-left:20px;padding-right:20px}}
-
-.footer{background:#fff;padding:60px 0;text-align:center}
-
-.footer a{text-decoration:none;font-size:24px;-webkit-transition:all 220ms ease-in-out;-moz-transition:all 220ms ease-in-out;-o-transition:all 220ms ease-in-out;transition:all 220ms ease-in-out}
-
-.footer a:hover{opacity:.7}
-
-.footer li{display:inline-block;margin:0 18px;width:30px;text-align:center}
-
-.footer li:first-child{margin-left:10px}
-
-.footer .icon-twitter{color:#00acee}
-
-.footer .icon-dribbble{color:#ea4c89}
-
-.footer .icon-email{color:#66527d}
